resolve issues with css: border color, font color in dark mode, remove Text component

--- a/embedded-components/src/index.css
+++ b/embedded-components/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    @apply eb-border-border;
+  }
+  body {
+    @apply eb-bg-background eb-font-sans eb-text-foreground eb-antialiased;
+  }
+}
